syntax = "proto3";

option go_package = ".;user";

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  int64 id = 1;
  string username = 2;
}

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}